<resources>
    <string name="app_name">Health Worker</string>
    <string name="sajida_tele_health">SAJIDA TELE HEALTH</string>
    <string name="image">image</string>
    <string name="health_worker_app">Health Worker App</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_number">ENTER YOUR MOBILE NUMBER</string>
    <string name="verify">Verify</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="appointments">Appointments</string>
    <string name="patients">Patients</string>
    <string name="settings">Settings</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="demo_name">Nayem Islam</string>
    <string name="demo_date">May 14, 2020 | 04.00 PM</string>
    <string name="demo_request_msg">Callback Requested to Dr. Arman Hossain</string>
    <string name="verify_patient">Verify Patient</string>
    <string name="enter_mobile_number">ENTER MOBILE NUMBER</string>
    <string name="send_otp">SEND OTP</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="beneficiary_id">Beneficiary ID</string>
    <string name="district">DISTRICT</string>
    <string name="upazila">UPAZILA</string>
    <string name="done">Done</string>
    <string name="add_new_patient_profile">Add new patient profile</string>
    <string name="setup">Setup</string>
    <string name="assessments">Assessments</string>
    <string name="enter_otp_sent_to">ENTER OTP SENT TO</string>
    <string name="select_district">Select district</string>
    <string name="select_upazila">Select upazila</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="logout">Logout</string>
    <string name="all_appiontments">All appiontments</string>
    <string name="vitals">Vitals</string>
    <string name="prescription">Prescription</string>
    <string name="reports">Reports</string>
    <string name="demo_category">Demo category</string>
    <string name="demo_price">৳ 0</string>
    <string name="add_new">Add New</string>
    <string name="appointment">Appointment</string>
    <string name="new_text">New</string>
    <string name="demo_rate">৳০</string>
    <string name="demo">Demo</string>
    <string name="_0s">0s</string>
    <string name="waiting_for_otp">WAITING FOR OTP</string>
    <string name="confirm">CONFIRM</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="slot_available">Slot Available</string>
    <string name="demo_exp">EXP 5 YEARS</string>
    <string name="mbbs">MBBS</string>
    <string name="confirm_appointment">CONFIRM APPOINTMENT</string>
    <string name="detail">Detail</string>
    <string name="advice">Advice</string>
    <string name="documents">Documents</string>
    <string name="regno">regNo</string>
    <string name="demo_language">ENGLISH, BANGLA</string>
    <string name="demo_work_place">SAJIDA HOSPITAL</string>
    <string name="demo_location">Keranigonj</string>
    <string name="demo_age">28</string>
    <string name="symptoms_checker">Symptoms Checker</string>
    <string name="demo_temperature">Body temperature (e.g. 98)</string>
    <string name="input_patient_s_vital_sign_data">Input Patient\'s Vital Sign Data</string>
    <string name="add_vitals">Add Vitals</string>
    <string name="demo_pulse">Pulse rate (e.g. 75)</string>
    <string name="respiration_rate_e_g_12">Respiration rate (e.g. 12)</string>
    <string name="blood_pressure">Blood pressure (e.g. 70/120)</string>
    <string name="body_weight_e_g_65">Body weight (e.g. 65)</string>
    <string name="add_report">Add Report</string>
    <string name="pdf">Pdf</string>
    <string name="please_click_here_to_add_photos">Please click here to add photos</string>
    <string name="choose_pdf">Choose Pdf</string>
    <string name="file_name">File Name</string>
    <string name="note">Note</string>
    <string name="upload">Upload</string>
    <string name="schedule">Schedule</string>
    <string name="internet_not_available">Internet not available, Please check your connection or connect to the internet</string>
    <string name="digit"><![CDATA[qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM @#$&amp;*/.:-_\'\',+]]></string>
    <string name="please_wait">Please wait</string>
    <string name="prescriptionWarning">* This medical advice is based on the symptoms provided by you over the telephonic consult. This is not intended to replace a physical examination by a doctor. Please visit a Doctor/Hospital for further management if your condition does not improve.</string>

    <string name="certificate">472f82bc4e0947edb20c8592f016f1f8</string>
    <string name="prescribed_on">Prescribed On</string>
    <string name="medicines">MEDICINES</string>
    <string name="medical_advice">MEDICAL ADVICE</string>
    <string name="history_and_symptoms">HISTORY AND SYMPTOMS</string>
    <string name="prescription_view">Prescription View</string>
    <string name="view_documents">View Documents</string>
    <string name="image_validation">Please upload an image first</string>
    <string name="pdf_validation">Please upload an pdf first</string>
    <string name="file_name_validation_text">Enter file name</string>
    <string name="note_validation">please add note</string>
    <string name="report_save_msg">Report Submitted</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="sajida_benificiary">Sajida Benificiary ?</string>

</resources>