<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.patientProfileCreate.PatientProfileCreateFragment">

    <data class="PatientProfileCreateFragmentBinding"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--<androidx.constraintlayout.widget.ConstraintLayout -->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".ui.patientProfile.PatientProfileFragment">-->

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/std_margin_16"
        android:src="@drawable/ic_baseline_arrow_back_primary_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/textView4"
        style="@style/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_normal"
        android:layout_marginTop="4dp"
        android:text="@string/add_new_patient_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:src="@drawable/person_male"
        android:contentDescription="@string/image" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_normal"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/full_name"
        android:ems="10"
        android:hint="@string/full_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_normal"
        android:ems="10"
        android:inputType="number"
        android:autofillHints="@string/age"
        android:hint="@string/age"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

    <EditText
        android:id="@+id/beneficiaryId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_normal"
        android:autofillHints="@string/beneficiary_id"
        android:ems="10"
        android:hint="@string/beneficiary_id"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

<!--    <EditText-->
<!--        android:id="@+id/district"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        android:autofillHints="@string/district"-->
<!--        android:hint="@string/district"-->
<!--        android:imeOptions="actionNext"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/beneficiaryId" />-->

    <LinearLayout
        android:id="@+id/districtLabel"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/beneficiaryId"
        app:layout_constraintStart_toStartOf="@+id/beneficiaryId"
        app:layout_constraintTop_toBottomOf="@+id/beneficiaryId"
        android:gravity="bottom">

        <TextView
            android:id="@+id/district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_normal"
            android:text="@string/select_district"
            android:layout_marginBottom="@dimen/std_dimen_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beneficiaryId" />

        <View
            android:id="@+id/tile_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_text" />
    </LinearLayout>

<!--    <EditText-->
<!--        android:id="@+id/upazila"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:inputType="textPersonName"-->
<!--        android:autofillHints="@string/upazila"-->
<!--        android:hint="@string/upazila"-->
<!--        android:imeOptions="actionDone"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/districtLabel" />-->

    <LinearLayout
        android:id="@+id/upazilaLabel"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="1dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/districtLabel"
        app:layout_constraintStart_toStartOf="@+id/districtLabel"
        app:layout_constraintTop_toBottomOf="@+id/districtLabel">

        <TextView
            android:id="@+id/upazila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_normal"
            android:layout_marginBottom="@dimen/std_dimen_4"
            android:text="@string/select_upazila"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beneficiaryId" />

        <View
            android:id="@+id/upazila_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_text" />
    </LinearLayout>

    <Button
        android:id="@+id/done"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upazilaLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>