<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/std_dimen_4"
    app:cardElevation="@dimen/std_dimen_4"        android:focusable="true"
    android:clickable="true"
    android:foreground="@drawable/ripple_dark"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="42dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_healthcare_and_medical" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_small"
            android:layout_marginTop="12dp"
            android:text="@string/demo_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_normal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/demo_price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category" />

        <TextView
            android:id="@+id/available"
            style="@style/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey_background"
            android:paddingStart="@dimen/std_dimen_12"
            android:paddingTop="@dimen/std_dimen_2"
            android:paddingEnd="@dimen/std_dimen_12"
            android:paddingBottom="@dimen/std_dimen_2"
            android:text="@string/new_text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.89"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>